--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<java.version>1.6</java.version>
-		<android.version>1.6_r3</android.version>
+		<android.version>4.1.1.4</android.version>
 		<android.platform>4</android.platform>
 		<android.support.version>19.0.0</android.support.version>
 	</properties>
