Fix for maven configs

--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>android</groupId>
+				<groupId>com.google.android</groupId>
 				<artifactId>android</artifactId>
 				<version>${android.version}</version>
 			</dependency>
@@ -116,7 +116,7 @@
 				<plugin>
 					<groupId>com.jayway.maven.plugins.android.generation2</groupId>
 					<artifactId>android-maven-plugin</artifactId>
-					<version>3.0.0-alpha-13</version>
+					<version>3.6.0</version>
 					<configuration>
 						<sdk>
 							<platform>${android.platform}</platform>
